--- a/data-analyst.html
+++ b/data-analyst.html
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Data-Analyst'>Data Analyst - Cover - Career Page</a></h5> 
+<h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Data-Analyst'>Data Analyst - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -211,7 +211,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -239,7 +239,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/summitpublicschoolssps/jobs/1938416'>Job Application for Manager of Data Analysis at Summit Public Schools (SPS)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/summitpublicschoolssps/jobs/1938416'>Job Application for Manager of Data Analysis at Summit Public Schools (SPS)</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -247,11 +247,11 @@
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/yr57i5gewqz4utrq7goz5i5fur'>Data Analyst | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/statestitle/jobs/1938800'>Job Application for Sr. Data Analyst at States Title</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/statestitle/jobs/1938800'>Job Application for Sr. Data Analyst at States Title</a></h5> 
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -329,7 +329,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://searchmetrics.recruitee.com/l/en/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/l/en/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
       Technical Account Manager / Data Analyst (m/w/d) - Integrations & Reportings - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -375,7 +375,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -443,7 +443,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
