--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -74,7 +74,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Richmond London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438175-lead-ios-engineer-also-senior-to-mid-level-lifestyle-app-london'>Fulton Garrick Ltd Lead IOS Engineer - Also Senior to Mid Level - Lifestyle App - London | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438175-lead-ios-engineer-also-senior-to-mid-level-lifestyle-app-london'>Fulton Garrick Ltd Lead IOS Engineer - Also Senior to Mid Level - Lifestyle App - London | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London  London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -82,7 +82,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4456211002'>Job Application for iOS Engineer - Warsaw at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4456211002'>Job Application for iOS Engineer - Warsaw at Glovo</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw  Barcelona Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -132,11 +132,11 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shapesecurity/4a5c90b0-b5da-45ce-8860-e07a7b6337ed'>Shape Security - Senior iOS Engineer, Toronto</a></h5> 
+<h5><a href='https://jobs.lever.co/shapesecurity/4a5c90b0-b5da-45ce-8860-e07a7b6337ed'>Shape Security - Senior iOS Engineer, Toronto</a></h5> 
 <p><span class="badge badge-light">Toronto  Toronto  Toronto</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/artsy/jobs/1926425'>Job Application for Senior iOS Engineer at Artsy</a></h5> 
+<h5><a href='https://boards.greenhouse.io/artsy/jobs/1926425'>Job Application for Senior iOS Engineer at Artsy</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -144,7 +144,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697948071-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999697948071-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -195,7 +195,7 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/442749-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://neugelb.join.com/jobs/442749-data-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -203,7 +203,7 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://inplayer.applytojob.com/apply/u0ghgfPCkI/Senior-IOS-Engineer'>Senior iOS Engineer - InPlayer - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://inplayer.applytojob.com/apply/u0ghgfPCkI/Senior-IOS-Engineer'>Senior iOS Engineer - InPlayer - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... You must be a passionate and experienced iOS developer who loves building 
 user facing iOS apps from scratch. You are proud of your code and can?...</p>
@@ -213,11 +213,11 @@ user facing iOS apps from scratch. You are proud of your code and can?...</p>
 <p>Oct 9, 2019 ... Are you a highly regarded talented Senior iOS Software Engineer with a passion 
 for delivering high quality applications that help change the world? Then we?...</p>
 <hr/>
-<h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of iOS Engineer (Southampton) at Starling Bank.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999697549713-senior-ios-engineer-cash-app'>Square Senior iOS Engineer, Cash App | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697549713-senior-ios-engineer-cash-app'>Square Senior iOS Engineer, Cash App | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -260,7 +260,7 @@ Yahoo! Finance | US - Sunnyvale ? Software Dev Engineer | US - Sunnyvale.</p>
 <p>22 hours ago ... PLAYSTUDIOS is a developer of engaging casual games for the world's largest 
 social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999697341353-ios-sdk-engineer-m-f-d-'>Smaato Inc. iOS SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999697341353-ios-sdk-engineer-m-f-d-'>Smaato Inc. iOS SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany  San Francisco, California Berlin Hamburg</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -284,7 +284,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Helsinki, Finland</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ribbon/jobs/4474671002'>Job Application for iOS Engineer at Ribbon</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ribbon/jobs/4474671002'>Job Application for iOS Engineer at Ribbon</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -296,7 +296,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912686'>Job Application for Principal, iOS Engineer[FinTech Business & Systems] at Coupang(TECH)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912686'>Job Application for Principal, iOS Engineer[FinTech Business & Systems] at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -304,7 +304,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/porto/engineering/fullstack-software-engineer-1700703?gh_jid=1700703'>Ios Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
+<h5><a href='https://www.talkdesk.com/careers/td/porto/engineering/fullstack-software-engineer-1700703?gh_jid=1700703'>Ios Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
